Fixing notification for first chunk