@@ -223,7 +223,7 @@ class PutOperation {
     if (isOperationComplete()) {
       boolean composite = !getSuccessfullyPutChunkIdsIfComposite().isEmpty();
       if (composite) {
-        metadataPutChunk.notifyForFirstChunkCreation();
+        metadataPutChunk.maybeNotifyForFirstChunkCreation();
       }
       if (blobId != null) {
         notificationSystem.onBlobCreated(getBlobIdString(), getBlobProperties(),
@@ -1259,12 +1259,17 @@ class PutOperation {
 
     /**
      * Notify for the creation of the first chunk. To be called after the overall operation is completed if the overall
-     * blob is composite. This will be called only if the operation succeeded.
+     * blob is composite. If no first chunk was put successfully, this will do nothing.
      */
-    void notifyForFirstChunkCreation() {
-      String chunkId = firstChunkIdAndProperties.getFirst().getID();
-      BlobProperties chunkProperties = firstChunkIdAndProperties.getSecond();
-      notificationSystem.onBlobCreated(chunkId, chunkProperties, NotificationBlobType.DataChunk);
+    void maybeNotifyForFirstChunkCreation() {
+      if (indexToChunkIds.get(0) != null) {
+        // reason to check for not null: there are chances that 2nd chunk would completes before the first chunk and
+        // the first chunk failed later. In such cases, even though metadata chunk might return some successfully
+        // completed chunkIds, the first chunk may be null
+        String chunkId = firstChunkIdAndProperties.getFirst().getID();
+        BlobProperties chunkProperties = firstChunkIdAndProperties.getSecond();
+        notificationSystem.onBlobCreated(chunkId, chunkProperties, NotificationBlobType.DataChunk);
+      }
     }
 
     @Override
